# kr-stock-wiki

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-report.yml  morning-report.yml  pre-market-report.yml  wiki-sync.yml
.hermes/agent-wiki/: backlog.md  decisions.md  index.md  schema.md
.hermes/agent-wiki/contracts/: kis-primary-price-source.md
.hermes/agent-wiki/runs/: 2026-07-23-harness-bootstrap.md
.hermes/agent-wiki/sources/: index.md
config/: watchlist.json
examples/: post-market-signals.json
scripts/: sync_wiki.py
src/kr_stock_wiki/: __init__.py  agents.py  cli.py  daily.py  evidence.py  harness.py  market_rules.py  models.py  scanner.py  sync.py  wiki_lint.py
src/kr_stock_wiki/collectors/: __init__.py  calendar.py  dart.py  kind.py  kind_market_notices.py  kis.py  krx.py  krx_live.py  market_notices.py  news.py  nxt.py
tests/: test_calendar.py  test_cli.py  test_daily.py  test_daily_workflow.py  test_dart.py  test_evidence.py  test_harness.py  test_kind.py  test_kind_market_notices.py  test_kis.py  test_krx.py  test_krx_live.py  test_market_notices.py  test_market_rules.py  test_news.py  test_nxt.py  test_scanner.py  test_sync.py  test_wiki_lint.py
wiki/: Candidates.md  Disclaimer.md  Home.md  Methodology.md  SCHEMA.md  log.md
