[project]
name = "kr-stock-wiki"
version = "0.1.0"
description = "Evidence-first multi-agent harness for short-term Korean stock research"
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "PyYAML>=6.0.2",
]

[project.scripts]
kr-stock-wiki = "kr_stock_wiki.cli:main"

[dependency-groups]
dev = ["pytest>=8.3", "pytest-cov>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kr_stock_wiki"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
